--- a/smarter-tasks/package.json
+++ b/smarter-tasks/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.14.1",
+    "vite-plugin-pwa": "^0.16.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
